--- a/scss/common/_variable.scss
+++ b/scss/common/_variable.scss
@@ -7,8 +7,8 @@ $color_beige: #FBF4E4;
 
 
 // font ===========================
-$font_family_en:"Ubuntu", "sans-serif";
-$font_family_kr:"nanum_square", "IBM Plex Sans KR";
+$font_family_kr:"SpoqaHanSansNeo-Bold", "IBM Plex Sans KR";
+$font_family_en:"sans-serif";
 $font_family_common:sans-serif;
 $font_weight_thin:300;
 $font_weight_normal:400;
