--- a/scss/src/dalkomm.scss
+++ b/scss/src/dalkomm.scss
@@ -1,5 +1,12 @@
 // dalkomm.scss
 
+@font-face {
+  font-family: 'SpoqaHanSansNeo-Bold';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2108@1.1/SpoqaHanSansNeo-Bold.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
 @import "../common/mixin";
 @import "../common/variable";
 
