--- a/css/src/dalkomm.css
+++ b/css/src/dalkomm.css
@@ -1,29 +1,162 @@
+@font-face {
+  font-family: "SpoqaHanSansNeo-Bold";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2108@1.1/SpoqaHanSansNeo-Bold.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
 @media all and (max-width: 767px) {
   #headBox {
     width: 100%;
-    height: 56px;
-    background-color: #ccc;
+    height: 60px;
+    padding: 4px;
+    background-color: #FBF4E4;
+  }
+
+  .navBox {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    height: auto;
+  }
+  .navBox h1 {
+    width: auto;
+    height: 50px;
+    padding: 10px;
+  }
+
+  .nav_area {
+    width: 50px;
+    height: 50px;
+    background-image: url(/img/menu.png);
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+  .nav_area .nav_inner {
+    display: block;
+    width: 0;
+    height: 0;
+    position: absolute;
+    z-index: -1;
+    clip: rect(0, 0, 0, 0);
+    overflow: hidden;
   }
 }
 @media all and (min-width: 768px) and (max-width: 1279px) {
   #headBox {
     width: 100%;
-    height: 56px;
-    background-color: #ccc;
+    height: 80px;
+    padding: 14px;
+    background-color: #FBF4E4;
+  }
+
+  .navBox {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    height: auto;
+  }
+  .navBox h1 {
+    width: auto;
+    height: 50px;
+    padding: 10px;
+  }
+
+  .nav_area {
+    width: 50px;
+    height: 50px;
+    background-image: url(/img/menu.png);
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+  .nav_area .nav_inner {
+    display: block;
+    width: 0;
+    height: 0;
+    position: absolute;
+    z-index: -1;
+    clip: rect(0, 0, 0, 0);
+    overflow: hidden;
   }
 }
 @media all and (min-width: 1280px) and (max-width: 1439px) {
   #headBox {
     width: 100%;
-    height: 120px;
-    background-color: #ccc;
+    height: 100px;
+    padding: 20px;
+    text-align: center;
+    line-height: 60px;
+    font-family: "SpoqaHanSansNeo-Bold";
+    background-color: #FBF4E4;
+  }
+
+  .navBox {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    height: auto;
+  }
+  .navBox h1 {
+    width: auto;
+    height: 60px;
+    padding-top: 10px;
+  }
+
+  .nav_area {
+    width: 700px;
+    height: 100%;
+  }
+  .nav_inner {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    height: auto;
+  }
+  .nav_inner li {
+    width: 100px;
+    height: 60px;
+    font-weight: bold;
+    font-size: 18px;
   }
 }
 @media all and (min-width: 1440px) {
   #headBox {
     width: 1440px;
-    height: 56px;
-    background-color: #ccc;
+    height: 100px;
+    margin: auto;
+    padding: 20px;
+    text-align: center;
+    line-height: 60px;
+    background-color: #FBF4E4;
+  }
+
+  .navBox {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    height: auto;
+  }
+  .navBox h1 {
+    width: auto;
+    height: 60px;
+    padding-top: 10px;
+  }
+
+  .nav_area {
+    width: 700px;
+    height: 100%;
+  }
+  .nav_inner {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    height: auto;
+  }
+  .nav_inner li {
+    width: 100px;
+    height: 60px;
+    font-weight: bold;
+    font-size: 18px;
+    font-family: "SpoqaHanSansNeo-Bold";
   }
 }
 @media all and (max-width: 767px) {
@@ -51,6 +184,7 @@
   #mainBox {
     width: 1440px;
     height: 960px;
+    margin: auto;
     background-color: #eee;
   }
 }
@@ -79,6 +213,7 @@
   #viewBox {
     width: 1440px;
     height: 1080px;
+    margin: auto;
     background-color: #ddd;
   }
 }
@@ -107,6 +242,7 @@
   #contentBox {
     width: 1440px;
     height: 1080px;
+    margin: auto;
     background-color: #ccc;
   }
 }
@@ -135,6 +271,7 @@
   #artBox {
     width: 1440px;
     height: 1080px;
+    margin: auto;
     background-color: #eee;
   }
 }
@@ -163,6 +300,7 @@
   #slideBox {
     width: 1440px;
     height: 1000px;
+    margin: auto;
     background-color: #cdc;
   }
 }
@@ -191,6 +329,7 @@
   #appBox {
     width: 1440px;
     height: 1220px;
+    margin: auto;
     background-color: #ddd;
   }
 }
@@ -219,6 +358,7 @@
   #subBox {
     width: 1440px;
     height: 752px;
+    margin: auto;
     background-color: #cdc;
   }
 }
@@ -247,6 +387,7 @@
   #footBox {
     width: 1440px;
     height: 760px;
+    margin: auto;
     background-color: #ccc;
   }
 }
