--- a/scss/page/_1headBox.scss
+++ b/scss/page/_1headBox.scss
@@ -3,20 +3,46 @@
 // mobile =====================================
 @include mobile {
   #headBox {
-    width: 100%; height: 56px;
-    background-color: #ccc;
+    width: 100%; height: 60px;
+    padding: 4px;
+    background-color: $color_beige;
   }
-}
+  .navBox {
+    display: flex; justify-content: space-between;
+    width: 100%; height: auto;
+
+    h1 {width: auto; height: 50px; padding: 10px; }
+  } // .navBox
+  @at-root .nav_area {width: 50px; height: 50px; 
+    background-image: url(/img/menu.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    & .nav_inner {@include blind;}
+  } // .nav_area
+} // mobile
 
 
 
 // // tablet =====================================
 @include tablet {
   #headBox {
-    width: 100%; height: 56px;
-    background-color: #ccc;
+    width: 100%; height: 80px;
+    padding: 14px;
+    background-color: $color_beige;
   }
-}
+  .navBox {
+    display: flex; justify-content: space-between;
+    width: 100%; height: auto;
+
+      h1 {width: auto; height: 50px; padding: 10px;}
+  } // .navBox
+  @at-root .nav_area {width: 50px; height: 50px;
+    background-image: url(/img/menu.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    & .nav_inner {@include blind;}
+  } //.nav_area
+} // tablet
 
 
 
@@ -24,10 +50,28 @@
 // // laptop =====================================
 @include laptop {
   #headBox {
-    width: 100%; height: 120px;
-    background-color: #ccc;
+    width: 100%; height: 100px;
+    padding: 20px;
+    text-align: center; line-height: 60px; font-family: 'SpoqaHanSansNeo-Bold';
+    background-color: $color_beige;
   }
-}
+  .navBox {
+    display: flex; justify-content: space-between;
+    width: 100%; height: auto;
+    h1 {width: auto; height: 60px; padding-top: 10px;}
+  } //.navBox
+  @at-root .nav_area {
+    width: 700px; height: 100%;
+    @at-root .nav_inner {
+      display: flex; justify-content: space-between;
+      width: 100%; height: auto;
+      & li {
+        width: 100px; height: 60px;
+        font-weight: bold; font-size: 18px;
+      } // li
+    } // .nav_inner
+  } // .nav_area
+} // laptop
 
 
 
@@ -36,7 +80,25 @@
 // // pc =====================================
 @include pc {
   #headBox {
-    width: 1440px; height: 56px;
-    background-color: #ccc;
+    width: 1440px; height: 100px;
+    margin: auto; padding: 20px;
+    text-align: center; line-height: 60px;
+    background-color: $color_beige;
   }
-}
+  .navBox {
+    display: flex; justify-content: space-between;
+    width: 100%; height: auto;
+    h1 {width: auto; height: 60px; padding-top: 10px;}
+  } // .navBox
+  @at-root .nav_area {
+    width: 700px; height: 100%;
+    @at-root .nav_inner {
+      display: flex; justify-content: space-between;
+      width: 100%; height: auto;;
+      & li {
+        width: 100px; height: 60px; 
+        font-weight: bold; font-size: 18px; font-family: 'SpoqaHanSansNeo-Bold';
+      } // li
+    } // .nav_inner
+  } // .nav_area
+} // pc
