commit: add mainpage

--- a/scss/common/_variable.scss
+++ b/scss/common/_variable.scss
@@ -2,13 +2,14 @@
 
 // color =========================
 $color_beige: #FBF4E4;
+$color_red: #FB4300;
 
 // border =========================
 
 
 // font ===========================
 $font_family_kr:"SpoqaHanSansNeo-Bold", "IBM Plex Sans KR";
-$font_family_en:"sans-serif";
+$font_family_en:"goldplay","sans-serif";
 $font_family_common:sans-serif;
 $font_weight_thin:300;
 $font_weight_normal:400;
