--- a/scss/page/_1headBox.scss
+++ b/scss/page/_1headBox.scss
@@ -80,7 +80,7 @@
 // // pc =====================================
 @include pc {
   #headBox {
-    width: 1440px; height: 100px;
+    width: 100%; min-width: 1440px; height: 100px;
     margin: auto; padding: 20px;
     text-align: center; line-height: 60px;
     background-color: $color_beige;
