--- a/css/common/reset.css
+++ b/css/common/reset.css
@@ -6,7 +6,7 @@
 html, body {
   width: 100%;
   height: 100%;
-  font-family: "sans-serif", "SpoqaHanSansNeo-Bold", "IBM Plex Sans KR", sans-serif;
+  font-family: "goldplay", "sans-serif", "SpoqaHanSansNeo-Bold", "IBM Plex Sans KR", sans-serif;
   font-weight: 300;
 }
 
