--- a/css/src/dalkomm.css
+++ b/css/src/dalkomm.css
@@ -4,6 +4,12 @@
   font-weight: normal;
   font-style: normal;
 }
+@font-face {
+  font-family: "goldplay";
+  src: url("../../fonts/goldplay/Goldplay-Bold.ttf") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
 @media all and (max-width: 767px) {
   #headBox {
     width: 100%;
@@ -120,7 +126,8 @@
 }
 @media all and (min-width: 1440px) {
   #headBox {
-    width: 1440px;
+    width: 100%;
+    min-width: 1440px;
     height: 100px;
     margin: auto;
     padding: 20px;
@@ -182,10 +189,39 @@
 }
 @media all and (min-width: 1440px) {
   #mainBox {
-    width: 1440px;
+    position: relative;
+    width: 100%;
+    min-width: 1440px;
     height: 960px;
     margin: auto;
-    background-color: #eee;
+    font-family: "goldplay";
+    background-color: #FBF4E4;
+  }
+  #mainBox h2 {
+    position: absolute;
+    top: 100px;
+    left: 660px;
+    z-index: 100;
+    width: 780px;
+    height: 500px;
+  }
+  #mainBox h2 span {
+    display: block;
+    width: 100%;
+    height: 130px;
+    font-size: 120px;
+    color: #FB4300;
+  }
+  #mainBox h2 span:last-child {
+    color: transparent;
+    -webkit-text-stroke: 2px #FB4300;
+  }
+
+  .main_img {
+    position: absolute;
+    top: 300px;
+    width: 1040px;
+    height: 614px;
   }
 }
 @media all and (max-width: 767px) {
@@ -211,7 +247,8 @@
 }
 @media all and (min-width: 1440px) {
   #viewBox {
-    width: 1440px;
+    width: 100%;
+    min-width: 1440px;
     height: 1080px;
     margin: auto;
     background-color: #ddd;
@@ -240,7 +277,8 @@
 }
 @media all and (min-width: 1440px) {
   #contentBox {
-    width: 1440px;
+    width: 100%;
+    min-width: 1440px;
     height: 1080px;
     margin: auto;
     background-color: #ccc;
@@ -269,7 +307,8 @@
 }
 @media all and (min-width: 1440px) {
   #artBox {
-    width: 1440px;
+    width: 100%;
+    min-width: 1440px;
     height: 1080px;
     margin: auto;
     background-color: #eee;
@@ -298,7 +337,8 @@
 }
 @media all and (min-width: 1440px) {
   #slideBox {
-    width: 1440px;
+    width: 100%;
+    min-width: 1440px;
     height: 1000px;
     margin: auto;
     background-color: #cdc;
@@ -327,7 +367,8 @@
 }
 @media all and (min-width: 1440px) {
   #appBox {
-    width: 1440px;
+    width: 100%;
+    min-width: 1440px;
     height: 1220px;
     margin: auto;
     background-color: #ddd;
@@ -356,7 +397,8 @@
 }
 @media all and (min-width: 1440px) {
   #subBox {
-    width: 1440px;
+    width: 100%;
+    min-width: 1440px;
     height: 752px;
     margin: auto;
     background-color: #cdc;
@@ -385,7 +427,8 @@
 }
 @media all and (min-width: 1440px) {
   #footBox {
-    width: 1440px;
+    width: 100%;
+    min-width: 1440px;
     height: 760px;
     margin: auto;
     background-color: #ccc;
