--- a/scss/page/_2mainBox.scss
+++ b/scss/page/_2mainBox.scss
@@ -36,8 +36,30 @@
 // pc =====================================
 @include pc {
   #mainBox{
-    width: 1440px; height: 960px;
+    position: relative;
+    width: 100%; min-width: 1440px; height: 960px;
     margin: auto;
-    background-color: #eee;
+    font-family: 'goldplay';
+    background-color: $color_beige;
+
+    h2 {
+      position: absolute; top: 100px; left: 660px; z-index: 100;
+      width: 780px; height: 500px;
+
+      & span {
+        display: block; 
+        width: 100%; height: 130px; 
+        font-size: 120px; color: $color_red;
+        // background-color: #ccc;
+        &:last-child {
+          color: transparent; -webkit-text-stroke: 2px $color_red;
+        }
+      }
+    }
+  } // #mainBox
+
+  .main_img {
+    position: absolute; top: 300px;
+    width: 1040px; height: 614px;
   }
-}
+} // pc
