--- a/scss/page/_6slideBox.scss
+++ b/scss/page/_6slideBox.scss
@@ -36,7 +36,7 @@
 // pc =====================================
 @include pc {
   #slideBox{
-    width: 1440px; height: 1000px; 
+    width: 100%; min-width: 1440px; height: 1000px; 
     margin: auto;
     background-color: #cdc;
   }
