--- a/scss/page/_7appBox.scss
+++ b/scss/page/_7appBox.scss
@@ -37,7 +37,7 @@
 // pc =====================================
 @include pc {
   #appBox {
-    width: 1440px; height: 1220px;
+    width: 100%; min-width: 1440px; height: 1220px;
     margin: auto;
     background-color: #ddd;
   }
