--- a/scss/page/_8subBox.scss
+++ b/scss/page/_8subBox.scss
@@ -36,7 +36,7 @@
 // pc =====================================
 @include pc {
   #subBox {
-    width: 1440px; height: 752px;
+    width: 100%; min-width: 1440px; height: 752px;
     margin: auto;
     background-color: #cdc;
   }
