--- a/scss/page/_9footBox.scss
+++ b/scss/page/_9footBox.scss
@@ -36,7 +36,7 @@
 // pc =====================================
 @include pc {
   #footBox{
-    width: 1440px; height: 760px;
+    width: 100%; min-width: 1440px; height: 760px;
     margin: auto;
     background-color: #ccc;
   }
