--- a/scss/page/_3viewBox.scss
+++ b/scss/page/_3viewBox.scss
@@ -36,7 +36,7 @@
 // pc =====================================
 @include pc {
   #viewBox {
-    width: 100%; min-width: 1440px; height: 1080px;
+    width: 1440px; height: 1080px;
     margin: auto;
     background-color: #ddd;
   }
